flags added to teams

--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -12,6 +12,7 @@ pl:
       team:
         name: Nazwa
         abbreviation: Skrót
+        flag: Flaga
       user:
         username: Nazwa użytkownika
         current_password: Obecne hasło
