--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -13,6 +13,7 @@ pl:
         name: Nazwa
         abbreviation: Skrót
         flag: Flaga
+        photo: Foteczka
       user:
         username: Nazwa użytkownika
         current_password: Obecne hasło
