--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -2,6 +2,10 @@
 pl:
   activerecord:
     attributes:
+      group:
+        name: Nazwa
+        owner_id: Właściciel
+        users: Członkowie
       competition:
         name: Nazwa
         year: Rok
